2008-07-26  Sebastien Pouliot  <sebastien@ximian.com>

	* Wizard.cs: Add an extra [End|Begin]Update on the TreeView before
	calling Sort. Fix a bug (infinite recursion) under Vista (and Windows
	2008 server) operating systems.

2008-07-15  Sebastien Pouliot  <sebastien@ximian.com>

	* gendarme.ico: Add Gendarme icon
	* Makefile.am: Add icon to dist

2008-07-14  Sebastien Pouliot  <sebastien@ximian.com>

	* GuiRunner.cs: Prefer Assembly.Load to LoadFile (AvoidCalling
	ProblematicMethodsRule). Also correct the "skip well known" 
	assemblies hack.

2008-06-16  Sebastien Pouliot  <sebastien@ximian.com>

	* Wizard.Designer.cs: Disable auto-scaling since it resize the form
	based on the font (and look bad on some Linux desktop).

2008-06-08  Sebastien Pouliot  <sebastien@ximian.com>

	* Page.cs: New. Moved un-nested enum from Wizard.cs [self-test]
	* Wizard.cs: Remove Page nested enum.
	* Makefile.am: Add Page.cs to the build
	* swf-wizard-runner.mdp: Update MD project file.

2008-06-01  Sebastien Pouliot  <sebastien@ximian.com>

	* Wizard.cs: Refactor ResultWriter selection.

2008-05-28  Sebastien Pouliot  <sebastien@ximian.com>

	* Makefile.am: Add ../console/Helpers.cs to the build
	* swf-wizard-runner.mdp: Add ../console/Helpers.cs to the build

2008-05-18  Sebastien Pouliot  <sebastien@ximian.com> 

	* swf-wizard-runner.mdp: Refer to System.Xml.Linq from GAC. 

2008-05-16  Sebastien Pouliot  <sebastien@ximian.com>

	* Wizard.cs: Sealed class AssemblyInfo (self-test).

2008-05-14  Jb Evain  <jbevain@novell.com>

	* Makefile.am: reference System.Xml.Linq.

2008-05-03  Sebastien Pouliot  <sebastien@ximian.com>

	* Wizard.cs: Change CouldCopyReport to static (self-test).

2008-04-27  Sebastien Pouliot  <sebastien@ximian.com>

	* Wizard.cs: Don't expose public fields.

2008-04-25  Sebastien Pouliot  <sebastien@ximian.com>

	* GuiRunner.cs: Better progress display.
	* Wizard.Designer.cs: Show root lines on the rule treeview.